<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/a_two_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_a_two_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_a_two_one"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp" />

        <LinearLayout
            android:id="@+id/lo_a_two_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_a_two_two"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:text="@string/tv_a_two_two"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pt_a_two_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lo_a_two_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_a_two_three"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:text="@string/tv_a_two_three"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pt_a_two_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/sp_a_two_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:entries="@array/sp_a_two_one"
            android:persistentDrawingCache="animation" />

        <LinearLayout
            android:id="@+id/lo_a_two_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tb_a_two_one"
                android:layout_width="5dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textOff="@string/tb_a_two_one_accept"
                android:textOn="@string/tb_a_two_one_reject" />

            <Button
                android:id="@+id/b_a_two_one"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="#736F6F"
                android:onClick="voteBtnClick"
                android:text="@string/b_a_two_one"
                android:textColor="@color/black"
                app:backgroundTint="#8F82837D" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>